# astgtm_elevation

./: .gitignore  README.mg  config.py  main.py  pyproject.toml
database/: clickhouse.py
processing/: file_processor.py  parallel_processor.py
utils/: paths.py  tif_reader.py
